---------------------------------------------------------------------------------------------------
Version: 4.1.3
Date: ????
  Bugfixes:
    - Fixed that BuildGen:import() overwrote the result amount to 1
    - Fixed that BuildGen:setOnAnimation() was pointing to off_animation
---------------------------------------------------------------------------------------------------
Version: 4.1.2
Date: 2020.12.23
  Bugfixes:
    - Fixed that certain functions compared tables with "==" and caused unwanted sideeffects
---------------------------------------------------------------------------------------------------
Version: 4.1.1
Date: 2020.12.14
  Features:
    - Added Krastorio 2 support
  Bugfixes:
    - Fixed that setDurabilityDesc() was not setting durability_description_value
    - Fixed that recipe & item order were overwritten on entity import
---------------------------------------------------------------------------------------------------
Version: 4.1.0
Date: 2020.11.26
  Info:
    - Updated for Factorio version 1.1.0
---------------------------------------------------------------------------------------------------
Version: 4.0.4
Date: 2020.10.04
  Features:
    - Added TechGen:sethidden()
  Bugfixes:
    - Fixed omnitractors mk4+ requiring the wrong plates with angels industries
    - More compression unlock fixes
    - Fixed missing recipe flags on recipe standardization
---------------------------------------------------------------------------------------------------
Version: 4.0.3
Date: 2020.09.01
  Bugfixes:
    - Fixed a possible crash with omni.lib.replace_recipe_result() due to missing brackets
---------------------------------------------------------------------------------------------------
Version: 4.0.2
Date: 2020.08.31
  Features:
    - omni.lib.add_recipe_ingredient()/result() can replace .expensive ings/res seperately
  Bugfixes:
    - Fixed omni.lib.add_unlock_recipe() not disabling the recipe